# texualplay

./: # environment.yml  .gitignore  command.py  dimensions01.py  frases.txt  myapp.py  pyproject.toml  question_title01.py  readme.md
